Fix long display name overflowing reply tile on IRC layout (#10343)
* Prevent long name blowout from Replytile on IRC layout


* Add a test to check long strings do not overflow


* Sort declarations based on .mx_IRCLayout .mx_EventTile .mx_DisambiguatedProfile


---------

--- a/res/css/views/rooms/_IRCLayout.pcss
+++ b/res/css/views/rooms/_IRCLayout.pcss
@@ -184,9 +184,10 @@ $irc-line-height: $font-18px;
 
     .mx_ReplyChain {
         .mx_DisambiguatedProfile {
-            order: unset;
             width: unset;
             background: transparent;
+            order: unset;
+            flex-shrink: unset; /* Unset flex-shrink to prevent long display name blowout */
         }
 
         .mx_EventTile_emote {
